# Dice

./: .BUILD_README  .buildinfo  .ci-test-and-cov.sh  .gcc-flags.json  .gcc-flags.json~  .gitignore  .gitlab-ci-test-and-cov.sh  .gitlab-ci.yml  .gitmodules  CIPSI.cpp  CIPSIbasics.cpp  CIPSIbasics.h  CIPSInonessential.cpp  CISD.cpp  CMakeLists.txt  CPS.cpp  CPS.h  ConfigurationInteraction.cpp  Davidson.cpp  Davidson.h  Determinants.cpp  Determinants.h  Excitations.cpp  FCIDUMP  GFMC.cpp  GTensorFT.cpp  GTensorFT2.cpp  GreensFunction.cpp  HCI.cpp  HCIbasics.cpp  HCIbasics.h  HCInonessentials.cpp  Hmult.cpp  Hmult.h  HmultDirect.h  LCC.cpp  LCC.h  LICENSE  MERGE_NOTES.md  Makefile  (+84 more)
.doctrees/: benchmarking.doctree  environment.pickle  gettingstarted.doctree  index.doctree  installation.doctree  keywords.doctree  overview.doctree  usingincasscf.doctree
.ipynb_checkpoints/: Sherman-Morrison-Formula-checkpoint.ipynb
DQMC/: CCSD.cpp  CCSD.h  DQMCMatrixElements.cpp  DQMCMatrixElements.h  DQMCMetropolis.cpp  DQMCMetropolis.h  DQMCSampling.cpp  DQMCSampling.h  DQMCStatistics.cpp  DQMCStatistics.h  DQMCUtils.cpp  DQMCUtils.h  DQMCWalker.cpp  DQMCWalker.h  GHF.cpp  GHF.h  GHFMultislater.cpp  GHFMultislater.h  GZHF.cpp  GZHF.h  GZHFMultislater.cpp  GZHFMultislater.h  Hamiltonian.cpp  Hamiltonian.h  KSGHF.cpp  KSGHF.h  MixedEstimator.cpp  MixedEstimator.h  Multislater.cpp  Multislater.h  ProjectedMF.cpp  ProjectedMF.h  RHF.cpp  RHF.h  UCCSD.cpp  UCCSD.h  UHF.cpp  UHF.h  Wavefunction.h  sJastrow.cpp  (+1 more)
Dice/: CISD.cpp  Davidson.cpp  Davidson.h  Determinants.cpp  Excitations.cpp  GTensorFT.cpp  GTensorFT2.cpp  Hmult.h  LCC.cpp  LCC.h  QDPTSOC.cpp  SHCI.cpp  SHCISortMpiUtils.cpp  SHCISortMpiUtils.h  SHCIbasics.cpp  SHCIbasics.h  SHCIgetdeterminants.cpp  SHCIgetdeterminants.h  SHCImakeHamiltonian.cpp  SHCImakeHamiltonian.h  SHCInonessentials.cpp  SHCInonessentials.h  SHCIrdm.cpp  SHCIrdm.h  SHCIsampledeterminants.cpp  SHCIsampledeterminants.h  SHCIshm.cpp  SHCIshm.h  SHCItime.h  SOChelper.cpp  SOChelper.h  SampleExcitation.cpp  communicate.h  forCyrus.cpp  input.cpp  input.h  integral.h  iowrapper.h  new_anglib.cpp  new_anglib.h  (+3 more)
FCIQMC/: dataFCIQMC.h  excitGen.cpp  excitGen.h  runFCIQMC.cpp  runFCIQMC.h  semiStoch.h  spawnFCIQMC.cpp  spawnFCIQMC.h  trivialWF.h  trivialWalk.h  utilsFCIQMC.cpp  utilsFCIQMC.h  walkersFCIQMC.cpp  walkersFCIQMC.h
GFMC/: propagate.h
ICPT/: BlockContract.cpp  BlockContract.h  PerturberDependentCode.cpp  icpt.cpp  icpt.h
NumericPotential/: CalculateSphHarmonics.cpp  Makefile  basis.cpp  fittedFunctions.cpp  fittedFunctions.h  pythonInterface.cpp  pythonInterface.h
SHCI/: Davidson.cpp  Determinants.cpp  Determinants.h  GTensorFT.cpp  LCC.cpp  MBE.cpp  Makefile  OccRestrictions.h  PostProcessStates.py  QDPTSOC.cpp  SHCI.cpp  SHCISortMpiUtils.cpp  SHCISortMpiUtils.h  SHCIbasics.cpp  SHCIbasics.h  SHCIgetdeterminants.cpp  SHCIgetdeterminants.h  SHCImakeHamiltonian.cpp  SHCImakeHamiltonian.h  SHCIrdm.cpp  SHCIrdm.h  SHCIshm.cpp  SHCIshm.h  SchmidtStates.cpp  SchmidtStates.h  cdfci.cpp  cdfci.h  global.h  input.cpp  input.h  new_anglib.cpp  postprocess.cpp  postprocess.h
VMC/: ContinuousTime.h  Davidson.cpp  Davidson.h  Deprecated.cpp  Deterministic.h  Metropolis.h  amsgrad.h  diis.cpp  evaluatePT.cpp  ftrl.h  runVMC.h  sgd.h  sr.cpp  sr.h
Wavefunctions/: AGP.cpp  AGP.h  AGPWalker.cpp  AGPWalker.h  BFSlater.cpp  BFSlater.h  CIWavefunction.h  CPS.cpp  CPS.h  CPSAGP.cpp  CPSAGP.h  CPSGHFSlater.cpp  CPSGHFSlater.h  CPSPfaffian.cpp  CPSPfaffian.h  CPSSlater.cpp  CPSSlater.h  CPSSlaterWalker.cpp  CPSSlaterWalker.h  CorrelatedWavefunction.h  Correlator.cpp  Correlator.h  EOM.h  GHFWalker.cpp  GHFWalker.h  Gutzwiller.cpp  Gutzwiller.h  HFWalker.cpp  HFWalker.h  HFWalkerHelper.cpp  HFWalkerHelper.h  JRBM.cpp  JRBM.h  Jastrow.cpp  Jastrow.h  JastrowMultiSlater.h  JastrowMultiSlaterWalker.h  Lanczos.h  MRCI.h  MRCIWalker.h  (+40 more)
ZSHCI/: Davidson.cpp  Davidson.h  Determinants.cpp  Excitations.cpp  GTensorFT2.cpp  HmultDirect.h  LCC.cpp  Makefile  SHCI.cpp  SHCISortMpiUtils.cpp  SHCISortMpiUtils.h  SHCIbasics.cpp  SHCIgetdeterminants.cpp  SHCImake4cHamiltonian.h  SHCImakeHamiltonian.cpp  SHCImakeHamiltonian.h  SHCIrdm.cpp  SHCIrdm.h  SHCIsampledeterminants.cpp  SOChelper.cpp  SampleExcitation.cpp  cdfci.cpp  cdfci.h  forCyrus.cpp  input.cpp  input.h  integral.cpp  integral.h  iowrapper.h  new_anglib.cpp  new_anglib.h  symmetry.h
_sources/: benchmarking.txt  conf.py  gettingstarted.txt  index.txt  installation.txt  keywords.txt  overview.txt  usingincasscf.txt
afqmc_jax/: h2o.py  mpi_jax.py  nh3.out  nh3.py  ph_afqmc.py  ph_afqmc_Diag.py  ph_afqmc_Diag_uhf.py  ph_afqmc_MultiSlater.py
cmake/: doctest.cmake  doctestAddTests.cmake
devtools/: make_dep_graph.sh
docs/: Makefile  conf.py  conf.py~  gettingstarted.rst  index.rst  index.rst~  installation.rst  installation.rst~  keywords.rst  make.bat  overview.rst  overview.rst~
examples/: README  README.md
executables/: ConfigurationInteraction.cpp  DQMC.cpp  FCIQMC.cpp  GFMC.cpp  ICPT.cpp  PythonInterface.cpp  StochasticPT.cpp  VMC.cpp  VMCwrapper.py
lib/: shcitools.c
notes/: Sherman-Morrison-Formula.ipynb
optimizer/: amsgrad.h  evaluateE.cpp  evaluateE.h
scripts/: NEVPT2Helper.py  PostProcessStates.py  QMCUtils.py  average_nevpt.py  blocking.py  detExpressions.py  fp_helper.py  gzhf.py  makeAllh20.py  makePfaffFromAGPComplex.py  makePfaffFromGHFComplex.py  orbitalScrabler.py  prepVMC.py  shci.py
test/: clean.sh  clean_wo_bkp.sh  runDQMC.sh  runFCIQMC.sh  runNEVPT.sh  runTests.sh  testEnergy.py
tests/: README.md  benchmark.csv  benchmark.py  clean.sh  dice_testing_utilities.py  rdm_utilities.py  runCITests.sh  runDQMC.sh  runFCIQMC.sh  runGFMC.sh  runSmallTests.sh  runTests.sh  runVMC.sh  testEnergy.py  test_energy.py  test_mpi.py  test_onepdm.py  test_rdm_nelec.py  test_serial.py  test_small.py  test_spin1RDM.py  test_threepdm.py  test_twopdm.py
unittests/: CMakeLists.txt  README.md  test_determinants.cpp  test_halfdeterminants.cpp  unit-Determinants.cpp  unit-integral.cpp  unit-symmetry.cpp
utils/: global.h  (+15 more)
(+708 files in other folders)
